# matching-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data-generator/: send_messages.py  test.ipynb
docs/: DESIGN.md  DEVELOPMENT.md  README.md
gateway/include/: Gateway.h  InputGateway.h  OutputGateway.h  ProtocolParser.h  TCPGateway.h  TCPInputGateway.h  TCPOutputGateway.h
gateway/src/: ProtocolParser.cpp  TCPGateway.cpp  TCPInputGateway.cpp
include/: MatchingEngine.h  Order.h  OrderBook.h  OrderManager.h  Trade.h
include/config/: matching_engine_config.hpp  test_config.hpp  utility_config.hpp
matching_engine/include/: MatchingEngine.h  Order.h  OrderBook.h  OrderManager.h
matching_engine/src/: MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderManager.cpp
src/: MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderManager.cpp  SystemLauncher.cpp  Trade.cpp  main.cpp
src/include/: SystemLauncher.h  config.hpp
test/: test.cpp
tests/: ComprehensiveTest.cpp  Main.cpp  MatchingEngineTest.cpp  OrderBookTest.cpp
tests/integration/: ComprehensiveTest.cpp  IntegrationTest.cpp
tests/unit/: MatchingEngineTest.cpp  MessageQueueTest.cpp  OrderBookTest.cpp  OrderManagerTest.cpp  TCPGatewayTest.cpp  TCPInputGatewayTest.cpp  TimestampUtilityTest.cpp
utility/include/: IDGenerator.hpp  Logger.hpp  Message.hpp  MessageQueue.h  OrderType.h  TimestampUtility.h  Trade.h
utility/src/: MessageQueue.cpp  TimeStampUtility.cpp  Trade.cpp
